fix overflow issue and cart NavIcon scroll issue

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,6 @@ html {
   font-family: "Opens Sans", sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  overflow-x: hidden;
 }
 
 body {
